--- a/index.html
+++ b/index.html
@@ -224,22 +224,14 @@
     <form action="https://formspree.io/xknrqbvn" method="POST">
       <div class="form-group">
         <label for="exampleInputEmail1">Email address</label>
-        <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
+        <input type="text" name="_replyto" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
       </div>
       <div class="form-group">
-        <label for="exampleFormControlTextarea1">Message</label>
-        <input type="text" class="form-control" id="exampleFormControlTextarea1">
+        <label for="exampleFormControlTextarea1" name="message">Message</label>
+        <input type="text" name="_replyto" class="form-control" id="exampleFormControlTextarea1">
       </div>
       <button type="submit" class="btn btn-primary" style="background-color: #8146FF; border-color: #8146FF">Submit</button>
     </form>
-  
-    <!--<form action="https://formspree.io/xknrqbvn" method="POST">
-  
-    <label> Your email: <input type="text" name="_replyto"></label>
-    <label> Your message: <textarea name="message"></textarea></label>
-
-    <button type="submit">Send</button>
-    </form>-->
   </div>
 </section>
 
