--- a/index.html
+++ b/index.html
@@ -224,13 +224,13 @@
     <form action="https://formspree.io/xknrqbvn" method="POST">
       <div class="form-group">
         <label for="exampleInputEmail1">Email address</label>
-        <input type="text" name="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
+        <input type="text" name="_replyto" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
       </div>
       <div class="form-group">
         <label for="exampleFormControlTextarea1" name="message">Message</label>
-        <input type="text" name="_replyto" class="form-control" id="exampleFormControlTextarea1">
+        <input type="text" name="message" class="form-control" id="exampleFormControlTextarea1">
       </div>
-      <button type="submit" class="btn btn-primary" style="background-color: #8146FF; border-color: #8146FF">Submit</button>
+      <button type="submit" value="send" class="btn btn-primary" style="background-color: #8146FF; border-color: #8146FF">Submit</button>
     </form>
   </div>
 </section>
