--- a/index.html
+++ b/index.html
@@ -227,8 +227,8 @@
         <input type="text" name="_replyto" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
       </div>
       <div class="form-group">
-        <label for="exampleFormControlTextarea1" name="message">Message</label>
-        <input type="text" name="message" class="form-control" id="exampleFormControlTextarea1">
+        <label for="messageTextArea" name="message">Message</label>
+          <textarea name="message" rows="5" cols="30" class="form-control" id="messageTextArea"></textarea>
       </div>
       <button type="submit" value="send" class="btn btn-primary" style="background-color: #8146FF; border-color: #8146FF">Submit</button>
     </form>
