--- a/index.html
+++ b/index.html
@@ -224,7 +224,7 @@
     <form action="https://formspree.io/xknrqbvn" method="POST">
       <div class="form-group">
         <label for="exampleInputEmail1">Email address</label>
-        <input type="text" name="_replyto" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
+        <input type="text" name="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
       </div>
       <div class="form-group">
         <label for="messageTextArea" name="message">Message</label>
