--- a/index.html
+++ b/index.html
@@ -152,8 +152,7 @@
           <div class="portfolioOverlay">
             <div class="portfolioCaption">
               <h4>KLM Visuals website</h4>
-                <p>KLM Visuals is where I house my design and photography portfolio.
-                 I designed and developed the website utilizing Bootstrap.</p>
+                <p>My design and photography portfolio I built with Bootstrap.</p>
                   <a href="https://www.klmvisuals.com" target="blank">> View</a>
             </div>
           </div>
@@ -168,9 +167,7 @@
           <div class="portfolioOverlay" style="background-color: #8146FF;">
             <div class="portfolioCaption">
               <h4>JenCo Photo website</h4>
-                <p>A friend of mine is a photographer. She asked me to build her portfolio website after seeing my design and photography portfolio.
-                  I designed and developed the website utilizing Bootstrap.
-                </p>
+                <p>A photography portfolio website I built with Bootstrap.</p>
                  <a href="https://www.jencophoto.world" target="blank">> View</a>
             </div>
           </div>
