--- a/index.html
+++ b/index.html
@@ -181,7 +181,7 @@
       <!--CSS KOALA-->
       <div class="col-lg">
         <div class="portfolioItem">
-          <a href="https://codepen.io/klmckee/pen/XWJQzdK" target="blank">
+          <a href="https://www.codepen.io/klmckee/pen/XWJQzdK" target="blank">
             <img src="./assets/cssKoala.jpg" style="width: 100%">
           </a>
 
