--- a/index.html
+++ b/index.html
@@ -189,7 +189,7 @@
             <div class="portfolioCaption">
               <h4>CSS Koala</h4>
                 <p>A koala illustration I created utilizing CSS.</p>
-                 <a href="hhttps://codepen.io/klmckee/pen/XWJQzdK" target="blank">> View</a>
+                 <a href="https://www.codepen.io/klmckee/pen/XWJQzdK" target="blank">> View</a>
             </div>
           </div>
         </div>
