--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@
       <div class="col-lg">
         <div class="portfolioItem">
           <a href="https://www.codepen.io/klmckee/pen/XWJQzdK" target="blank">
-            <img src="./assets/cssKoala.jpg" style="width: 100%">
+            <img src="./assets/cssKoala.jpg" style="width: 100%; height: 100%">
           </a>
 
           <div class="portfolioOverlay" style="background-color: #8146FF;">
@@ -198,13 +198,47 @@
       <div class="col-lg">
         <div class="portfolioItem">
           <a href="https://mckeekaylie.github.io/staticlayout/" target="blank">
-            <img src="./assets/static.jpg" style="width: 100%">
+            <img src="./assets/static.jpg" style="width: 100%; height: 100%">
           </a>
           <div class="portfolioOverlay">
             <div class="portfolioCaption">
               <h4>Hulu Welcome Page</h4>
                 <p>A static recreation of the Hulu Welcome page</p>
                  <a href="https://mckeekaylie.github.io/staticlayout/" target="blank">> View</a>
+            </div>
+          </div>
+        </div>
+      </div>
+
+  <!--ROW 3-->
+    <div class="row" id="portfolioRow3">
+      <!--Pokemon API-->
+      <div class="col-lg">
+        <div class="portfolioItem">
+          <a href="https://klm-pokemon-search-api.firebaseapp.com/" target="blank">
+            <img src="./assets/pokemon.jpg" style="width: 100%; height: 100%">
+          </a>
+
+          <div class="portfolioOverlay">
+            <div class="portfolioCaption">
+              <h4>Pokémon Search App</h4>
+                <p>A Pokémon search app I created utilizing the PokéAPI.</p>
+                 <a href="https://klm-pokemon-search-api.firebaseapp.com/" target="blank">> View</a>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="col-lg">
+        <div class="portfolioItem">
+          <a href="https://repl.it/@KaylieMcKee/32-Guessing-Game" target="blank">
+            <img src="./assets/guessingGame.jpg" style="width: 100%; height: 100%">
+          </a>
+
+          <div class="portfolioOverlay" style="background-color: #8146FF;">
+            <div class="portfolioCaption">
+              <h4>Guessing Game</h4>
+                <p>A Guessing Game I created solely in JavaScript.</p>
+                 <a href="https://repl.it/@KaylieMcKee/32-Guessing-Game" target="blank">> View</a>
             </div>
           </div>
         </div>
