portfolio section fix

--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
   <div class="container">
     <h1>Portfolio</h1>
     <!--ROW 1-->
-    <div class="row">
+    <div class="row no-gutters">
       <!--KLM Visuals-->
       <div class="col-lg">
         <div class="portfolioItem">
@@ -177,7 +177,7 @@
     </div>
 
     <!--ROW 2-->
-    <div class="row" id="portfolioRow2">
+    <div class="row no-gutters" id="portfolioRow2">
       <!--CSS KOALA-->
       <div class="col-lg">
         <div class="portfolioItem">
@@ -211,7 +211,7 @@
       </div>
 
   <!--ROW 3-->
-    <div class="row" id="portfolioRow3">
+    <div class="row no-gutters" id="portfolioRow3">
       <!--Pokemon API-->
       <div class="col-lg">
         <div class="portfolioItem">
