--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
       <div class="col-lg">
         <div class="portfolioItem">
           <a href="https://www.jencophoto.world" target="blank">
-            <img src="./assets/jcphoto.jpg" style="width: 100%; height: 100%">
+            <img src="./assets/jenco.png" style="width: 100%; height: 100%">
           </a>
           <div class="portfolioOverlay" style="background-color: #8146FF;">
             <div class="portfolioCaption">
