added my concert log

--- a/index.html
+++ b/index.html
@@ -128,6 +128,9 @@
       <div class="col-sm" id="react">
         <img src="assets/iconfinder_React.js_logo_1174949.png" style="width: 100%">
       </div>
+      <div class="col-sm" id="react">
+        <img src="assets/node.png" style="width: 100%">
+      </div>
       <div class="col-sm" id="cc">
         <img src="assets/creativeCloud.png" style="width: 100%">
       </div>
@@ -194,17 +197,17 @@
           </div>
         </div>
       </div>
-      <!--STATIC LAYOUT-->
+      <!--MY CONCERT LOG-->
       <div class="col-lg">
         <div class="portfolioItem">
-          <a href="https://mckeekaylie.github.io/staticlayout/" target="blank">
-            <img src="./assets/static.jpg" style="width: 100%; height: 100%">
+          <a href="https://klm-myconcertlog.herokuapp.com/" target="blank">
+            <img src="./assets/myConcertLog.png" style="width: 100%; height: 100%">
           </a>
           <div class="portfolioOverlay">
             <div class="portfolioCaption">
-              <h4>Hulu Welcome Page</h4>
-                <p>A static recreation of the Hulu Welcome page</p>
-                 <a href="https://mckeekaylie.github.io/staticlayout/" target="blank">> View</a>
+              <h4>My Concert Log</h4>
+                <p>A full stack app in which users can log concerts they have attended.</p>
+                 <a href="https://klm-myconcertlog.herokuapp.com/" target="blank">> View</a>
             </div>
           </div>
         </div>
@@ -228,6 +231,7 @@
           </div>
         </div>
       </div>
+      <!--Guessing Game-->
       <div class="col-lg">
         <div class="portfolioItem">
           <a href="https://repl.it/@KaylieMcKee/32-Guessing-Game" target="blank">
