--- a/index.html
+++ b/index.html
@@ -27,6 +27,9 @@
           <a class="nav-link" href="#mySkills">Skills</a>
         </li>
         <li class="nav-item">
+          <a class="nav-link" href="#certifications">Certifications</a>
+        </li>
+        <li class="nav-item">
           <a class="nav-link" href="#portfolio">Portfolio</a>
         </li>
         <li class="nav-item">
@@ -128,7 +131,7 @@
       <div class="col-sm" id="react">
         <img src="assets/iconfinder_React.js_logo_1174949.png" style="width: 100%">
       </div>
-      <div class="col-sm" id="react">
+      <div class="col-sm" id="node">
         <img src="assets/node.png" style="width: 100%">
       </div>
       <div class="col-sm" id="cc">
@@ -137,6 +140,34 @@
       <div class="col-sm" id="figma">
         <img src="assets/figma.png" style="width: 70%">
       </div>
+    </div>
+  </section>
+
+  <section id="certifications">
+    <h1>My Certifications</h1>
+    <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+      <div class="carousel-inner">
+        <div class="carousel-item active">
+          <img src="assets/jsEssential.jpg" class="d-block w-100" alt="JavaScript Essential Training">
+        </div>
+        <div class="carousel-item">
+          <img src="assets/react-1.jpg" class="d-block w-100" alt="React.js Essential Training">
+        </div>
+        <div class="carousel-item">
+          <img src="assets/node-1.jpg" class="d-block w-100" alt="Node.js Essential Training">
+        </div>
+        <div class="carousel-item">
+          <img src="assets/express-1.jpg" class="d-block w-100" alt="Express Essential Training">
+        </div>
+      </div>
+      <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+        <span class="sr-only">Previous</span>
+      </a>
+      <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+        <span class="sr-only">Next</span>
+      </a>
     </div>
   </section>
 
@@ -250,6 +281,8 @@
     </div>
   </div>
 </section>
+
+
 
 <!--CONTACT-->
 <section id="contact">
