--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <body>
 <!--nav-->
 <nav class="navbar navbar-expand-lg navbar-dark">
-  <a class="navbar-brand" href="#jumbo" style="color: #46E6FF; margin-left: 15%">Kaylie McKee</a>
+  <a class="navbar-brand" href="#jumbo" style="color: #46E6FF">Kaylie McKee</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
@@ -38,7 +38,8 @@
       </ul>
     </div>
   </nav>
-<!--hero-->
+
+<!-- HERO -->
 <section id="jumbo">
 <div class="jumbotron jumbotron-fluid">
     <div class="container" id="jumboContent">
@@ -75,12 +76,12 @@
           </a>
         </div>
       </div>
-
     </div>
     </div>
   </div>
 </section>
 
+<!-- ABOUT ME -->
 <section id ="aboutMe">
   <div class="container">
     <div class="row">
@@ -104,12 +105,11 @@
         <img src="assets/me_crop.jpg">
       </div>
     </div>
-    
   </div>
 </section>
 
+<!-- MY SKILLS -->
 <section id="mySkills">
-
   <div class="container">
     <h1>My Skills</h1>
     <div class="row">
@@ -143,6 +143,7 @@
     </div>
   </section>
 
+  <!-- MY CERTIFICATIONS -->
   <section id="certifications">
     <h1>My Certifications</h1>
     <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
@@ -171,13 +172,13 @@
     </div>
   </section>
 
-<!--PORTFOLIO-->
+<!-- PORTFOLIO -->
 <section id="portfolio">
   <div class="container">
     <h1>Portfolio</h1>
-    <!--ROW 1-->
+    <!-- ROW 1 -->
     <div class="row no-gutters">
-      <!--KLM Visuals-->
+      <!-- KLM Visuals -->
       <div class="col-lg">
         <div class="portfolioItem">
           <a href="https://www.klmvisuals.com" target="blank">
@@ -192,7 +193,7 @@
           </div>
         </div>
       </div>
-      <!--JC Photo-->
+      <!-- JC Photo -->
       <div class="col-lg">
         <div class="portfolioItem">
           <a href="https://www.jencophoto.world" target="blank">
@@ -207,18 +208,16 @@
           </div>
         </div>
       </div>
-
     </div>
 
     <!--ROW 2-->
     <div class="row no-gutters" id="portfolioRow2">
-      <!--CSS KOALA-->
+      <!-- CSS KOALA -->
       <div class="col-lg">
         <div class="portfolioItem">
           <a href="https://www.codepen.io/klmckee/pen/XWJQzdK" target="blank">
             <img src="./assets/cssKoala.jpg" style="width: 100%; height: 100%">
           </a>
-
           <div class="portfolioOverlay" style="background-color: #8146FF;">
             <div class="portfolioCaption">
               <h4>CSS Koala</h4>
@@ -228,7 +227,7 @@
           </div>
         </div>
       </div>
-      <!--MY CONCERT LOG-->
+      <!-- MY CONCERT LOG -->
       <div class="col-lg">
         <div class="portfolioItem">
           <a href="https://klm-myconcertlog.herokuapp.com/" target="blank">
@@ -246,13 +245,12 @@
 
   <!--ROW 3-->
     <div class="row no-gutters" id="portfolioRow3">
-      <!--Pokemon API-->
+      <!-- POKEMON API -->
       <div class="col-lg">
         <div class="portfolioItem">
           <a href="https://klm-pokemon-search-api.firebaseapp.com/" target="blank">
             <img src="./assets/pokemon.jpg" style="width: 100%; height: 100%">
           </a>
-
           <div class="portfolioOverlay">
             <div class="portfolioCaption">
               <h4>Pokémon Search App</h4>
@@ -262,13 +260,12 @@
           </div>
         </div>
       </div>
-      <!--Guessing Game-->
+      <!-- GUESSING GAME -->
       <div class="col-lg">
         <div class="portfolioItem">
           <a href="https://repl.it/@KaylieMcKee/32-Guessing-Game" target="blank">
             <img src="./assets/guessingGame.jpg" style="width: 100%; height: 100%">
           </a>
-
           <div class="portfolioOverlay" style="background-color: #8146FF;">
             <div class="portfolioCaption">
               <h4>Guessing Game</h4>
@@ -282,9 +279,7 @@
   </div>
 </section>
 
-
-
-<!--CONTACT-->
+<!-- CONTACT -->
 <section id="contact">
   <div class="container">
     <h1>Contact Me</h1>
@@ -303,6 +298,7 @@
   </div>
 </section>
 
+<!-- FOOTER -->
 <section id="footer">
   <div class="container">
     <div class="row">
@@ -323,8 +319,7 @@
   </div>
 </section>
     
-<!--SCRIPTS-->
-
+<!-- SCRIPTS -->
     <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
