added favicon, codewars icon, and new certs

--- a/index.html
+++ b/index.html
@@ -9,6 +9,10 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
     <link href="https://fonts.googleapis.com/css?family=Barlow:300,400,500,600,700&display=swap" rel="stylesheet">
     <link rel="stylesheet" ref="text/css" href="main.css">
+
+    <link rel="shortcut icon" href="assets/favicon.png" type="image/x-icon">
+    <link rel="icon" href="assets/favicon.png" type="image/x-icon">
+
 </head>
 
 <body>
@@ -27,7 +31,7 @@
           <a class="nav-link" href="#mySkills">Skills</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#certifications">Certifications</a>
+          <a class="nav-link" href="#certifications">Certificates</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="#portfolio">Portfolio</a>
@@ -73,6 +77,9 @@
           </a>
           <a href="https://github.com/mckeekaylie" target="blank">
             <img src="./assets/github-9-256.png" style="width: 3em">
+          </a>
+          <a href="https://www.codewars.com/users/kayliem?refreshed=true" target="blank">
+            <img src="./assets/codewars.png" style="width: 3em">
           </a>
         </div>
       </div>
@@ -131,6 +138,9 @@
       <div class="col-sm" id="react">
         <img src="assets/iconfinder_React.js_logo_1174949.png" style="width: 100%">
       </div>
+      <div class="col-sm" id="ts">
+        <img src="assets/ts-logo.jpg" style="width: 100%">
+      </div>
       <div class="col-sm" id="node">
         <img src="assets/node.png" style="width: 100%">
       </div>
@@ -145,7 +155,7 @@
 
   <!-- MY CERTIFICATIONS -->
   <section id="certifications">
-    <h1>My Certifications</h1>
+    <h1>My Certificates</h1>
     <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
       <div class="carousel-inner">
         <div class="carousel-item active">
@@ -159,6 +169,12 @@
         </div>
         <div class="carousel-item">
           <img src="assets/express-1.jpg" class="d-block w-100" alt="Express Essential Training">
+        </div>
+        <div class="carousel-item">
+          <img src="assets/ts-1.jpg" class="d-block w-100" alt="TypeScript Essential Training">
+        </div>
+        <div class="carousel-item">
+          <img src="assets/http-1.jpg" class="d-block w-100" alt="HTTP Essential Training">
         </div>
       </div>
       <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
@@ -308,6 +324,9 @@
         </a>
         <a href="https://github.com/mckeekaylie" target="blank">
           <img src="./assets/github-9-256.png" style="width: 3em">
+        </a>
+        <a href="https://www.codewars.com/users/kayliem?refreshed=true" target="blank">
+          <img src="./assets/codewars.png" style="width: 3em">
         </a>
       </div>
     </div>
