--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Kaylie McKee</title>
+    <title>Kaylie Woods</title>
 
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
     <link href="https://fonts.googleapis.com/css?family=Barlow:300,400,500,600,700&display=swap" rel="stylesheet">
@@ -18,14 +18,14 @@
 <body>
 <!--nav-->
 <nav class="navbar navbar-expand-lg navbar-dark">
-  <a class="navbar-brand" href="#jumbo" style="color: #46E6FF">Kaylie McKee</a>
+  <a class="navbar-brand" href="#jumbo" style="color: #46E6FF">Kaylie Woods</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse" id="navbarNav">
       <ul class="navbar-nav">
         <li class="nav-item">
-          <a class="nav-link" href="#aboutMe">About </a>
+          <a class="nav-link" href="#aboutMe">About</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="#mySkills">Skills</a>
@@ -34,7 +34,7 @@
           <a class="nav-link" href="#certifications">Certificates</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#portfolio">Portfolio</a>
+          <a class="nav-link" href="#portfolio">Projects</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="#contact">Contact</a>
@@ -72,14 +72,8 @@
       </div>
       <div class="row" style="padding-top: 2em;">
         <div class="col">
-          <a href="https://www.linkedin.com/in/kayliemckee" target="blank">
+          <a href="https://www.linkedin.com/in/kayliewoods" target="blank">
             <img src="./assets/linkedin-3-256.png" style="width: 3em">
-          </a>
-          <a href="https://github.com/mckeekaylie" target="blank">
-            <img src="./assets/github-9-256.png" style="width: 3em">
-          </a>
-          <a href="https://www.codewars.com/users/kayliem?refreshed=true" target="blank">
-            <img src="./assets/codewars.png" style="width: 3em">
           </a>
         </div>
       </div>
@@ -107,6 +101,11 @@
            missing in my day-to-day. Two colleagues told me about Eleven Fifty Academy after I informed them of my interest 
            in development. After consideration, I signed up for Eleven Fifty's web development program knowing that while 
            I love design, the passion I have for writing code far surpasses that of design.</p> 
+
+        <p>Ever since graduating from Eleven Fifty, I have worked at TCC Software Solutions as a UI/UX Developer. During my time at TCC,
+          I have worked on several projects including GoGoMeds, NJCCIS, Meck Pre-K, OKDHS, and the TCC website itself. My tasks for these projects have spanned both front and back end.
+          I have designed user interfaces in Adobe XD, coded new pages and features both client and server side, resolved countless bugs, and ensured 508 compliance as well as mobile responsiveness. 
+        </p>
       </div>
       <div class="col-md">
         <img src="assets/me_crop.jpg">
@@ -120,34 +119,40 @@
   <div class="container">
     <h1>My Skills</h1>
     <div class="row">
-      <div class="col-sm" id="html">
+      <div class="col-md" id="html">
         <img src="assets/html5.png" style="width: 100%">
       </div>
-      <div class="col-sm" id="css">
+      <div class="col-md" id="css">
         <img src="assets/css3.png" style="width: 70%">
       </div>
-      <div class="col-sm" id="js">
+      <div class="col-md" id="js">
         <img src="assets/js.png" style="width: 100%">
       </div>
-      <div class="col-sm" id="boot">
+      <div class="col-md" id="cs">
+        <img src="assets/csharp.png" style="width: 100%">
+      </div>
+      <div class="col-md" id="sql">
+        <img src="assets/sql.png" style="width: 100%">
+      </div>
+      <div class="col-md" id="ang">
+        <img src="assets/angular.png" style="width: 100%">
+      </div>
+      <div class="col-md" id="boot">
         <img src="assets/bootstrap.png" style="width: 100%">
       </div>
-      <div class="col-sm" id="git">
+      <div class="col-md" id="git">
         <img src="assets/github-9-256_Blk.png" style="width: 100%">
       </div>
-      <div class="col-sm" id="react">
+      <div class="col-md" id="react">
         <img src="assets/iconfinder_React.js_logo_1174949.png" style="width: 100%">
       </div>
-      <div class="col-sm" id="ts">
+      <div class="col-md" id="ts">
         <img src="assets/ts-logo.jpg" style="width: 100%">
       </div>
-      <div class="col-sm" id="node">
-        <img src="assets/node.png" style="width: 100%">
-      </div>
-      <div class="col-sm" id="cc">
+      <div class="col-md" id="cc">
         <img src="assets/creativeCloud.png" style="width: 100%">
       </div>
-      <div class="col-sm" id="figma">
+      <div class="col-md" id="figma">
         <img src="assets/figma.png" style="width: 70%">
       </div>
     </div>
@@ -159,6 +164,18 @@
     <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
       <div class="carousel-inner">
         <div class="carousel-item active">
+          <img src="assets/cSharpBasics.jpg" class="d-block w-100" alt="C# Basics for Beginners">
+        </div>
+        <div class="carousel-item">
+          <img src="assets/sqlBootcamp.jpg" class="d-block w-100" alt="The Complete SQL Bootcamp">
+        </div>
+        <div class="carousel-item">
+          <img src="assets/angularCompleteGuide.jpg" class="d-block w-100" alt="Angular The Complete Guide">
+        </div>
+        <div class="carousel-item">
+          <img src="assets/sassCourse.jpg" class="d-block w-100" alt="The Complete Sass and SCSS course">
+        </div>
+        <div class="carousel-item">
           <img src="assets/jsEssential.jpg" class="d-block w-100" alt="JavaScript Essential Training">
         </div>
         <div class="carousel-item">
@@ -191,108 +208,189 @@
 <!-- PORTFOLIO -->
 <section id="portfolio">
   <div class="container">
-    <h1>Portfolio</h1>
-    <!-- ROW 1 -->
+    <h1>Projects</h1>
+    <!-- GGM -->
     <div class="row no-gutters">
-      <!-- KLM Visuals -->
       <div class="col-lg">
         <div class="portfolioItem">
-          <a href="https://www.klmvisuals.com" target="blank">
-            <img src="./assets/klmVisuals.jpg" style="width: 100%; height: 100%">
+          <a href="https://www.gogomeds.com" target="blank">
+            <img src="./assets/ggm.png" style="width: 100%; height: 100%">
           </a>
-          <div class="portfolioOverlay">
-            <div class="portfolioCaption">
-              <h4>KLM Visuals website</h4>
-                <p>My design and photography portfolio I built with Bootstrap.</p>
-                  <a href="https://www.klmvisuals.com" target="blank">> View</a>
-            </div>
-          </div>
         </div>
       </div>
-      <!-- JC Photo -->
       <div class="col-lg">
-        <div class="portfolioItem">
-          <a href="https://www.jencophoto.world" target="blank">
-            <img src="./assets/jenco.png" style="width: 100%; height: 100%">
-          </a>
-          <div class="portfolioOverlay" style="background-color: #8146FF;">
-            <div class="portfolioCaption">
-              <h4>JenCo Photo website</h4>
-                <p>A photography portfolio website I built with Bootstrap.</p>
-                 <a href="https://www.jencophoto.world" target="blank">> View</a>
-            </div>
-          </div>
+        <div class="p-4 caption">
+          <h4>GoGoMeds</h4>
+          <p>As a member of the GoGoMeds team at TCC Software Solutions I completed a variety of front-end tasks. This includes
+            coding the HTML & CSS of various pages and features, designing user interfaces in Adobe XD, ensuring mobile responsiveness
+            of pages, fixing bugs, and updating page content. I also worked on rebuilding and re-designing GoGoMeds from the ground up, leading the UI/UX side.
+          </p>
+          <a href="https://www.gogomeds.com" target="blank">> View</a>
         </div>
       </div>
     </div>
-
-    <!--ROW 2-->
-    <div class="row no-gutters" id="portfolioRow2">
-      <!-- CSS KOALA -->
-      <div class="col-lg">
+    <!-- NJCCIS -->
+    <div class="row no-gutters">
+      <div class="col-lg d-lg-none">
         <div class="portfolioItem">
-          <a href="https://www.codepen.io/klmckee/pen/XWJQzdK" target="blank">
-            <img src="./assets/cssKoala.jpg" style="width: 100%; height: 100%">
+          <a href="https://www.njccis.com" target="blank">
+            <img src="./assets/njccis.png" style="width: 100%; height: 100%">
           </a>
-          <div class="portfolioOverlay" style="background-color: #8146FF;">
-            <div class="portfolioCaption">
-              <h4>CSS Koala</h4>
-                <p>A koala illustration I created utilizing CSS.</p>
-                 <a href="https://www.codepen.io/klmckee/pen/XWJQzdK" target="blank">> View</a>
-            </div>
-          </div>
         </div>
       </div>
-      <!-- MY CONCERT LOG -->
+      <div class="col-lg">
+        <div class="p-4 caption">
+          <h4>NJCCIS</h4>
+          <p>As a member of the NJCCIS team at TCC Software Solutions, I implemented various new features on the front-end and back-end as well as 
+            fixed front-end and back-end bugs utilizing HTML, CSS, SCSS, Bootstrap, Angular, C#, SQL, and TypeScript.</p>
+          <a href="https://www.njccis.com" target="blank">> View</a>
+        </div>
+      </div>
+      <div class="col-lg d-none d-lg-flex">
+        <div class="portfolioItem">
+          <a href="https://www.njccis.com" target="blank">
+            <img src="./assets/njccis.png" style="width: 100%; height: 100%">
+          </a>
+        </div>
+      </div>
+    </div>
+    <!-- Meck Pre-K -->
+    <div class="row no-gutters">
+      <div class="col-lg">
+        <div class="portfolioItem">
+          <a href="https://ascend.meckprek.com/ecds/home" target="blank">
+            <img src="./assets/meck.png" style="width: 100%; height: 100%">
+          </a>
+        </div>
+      </div>
+      <div class="col-lg">
+        <div class="p-4 caption">
+          <h4>Meck Pre-K</h4>
+          <p>As a member of the Meck Pre-K team at TCC Software Solutions, I coded the HTML and CSS of several new features and
+            reviewed new features added by the software developers to ensure 508 compliance and mobile responsiveness.
+          </p>
+          <a href="https://ascend.meckprek.com/ecds/home" target="blank">> View</a>
+        </div>
+      </div>  
+    </div>
+    <!-- OKDHS -->
+    <!-- <div class="row no-gutters">
+      <div class="col-lg d-lg-none">
+        <div class="portfolioItem">
+          <a href="https://www.njccis.com" target="blank">
+            <img src="./assets/njccis.png" style="width: 100%; height: 100%">
+          </a>
+        </div>
+    </div>
+      <div class="col-lg">
+        <div class="p-4 caption">
+          <h4>OKDHS</h4>
+          <p>As a member of the OKDHS team at TCC Software Solutions I worked with QA to resolve pages with 508 compliance errors.</p>
+          <a href="https://www.njccis.com" target="blank">> View</a>
+        </div>
+      </div>
+      <div class="col-lg d-none d-lg-flex">
+          <div class="portfolioItem">
+            <a href="https://www.njccis.com" target="blank">
+              <img src="./assets/njccis.png" style="width: 100%; height: 100%">
+            </a>
+          </div>
+      </div>
+    </div> -->
+    <!-- TCC -->
+    <div class="row no-gutters">
+      <div class="col-lg d-lg-none">
+        <div class="portfolioItem">
+          <a href="https://www.e-tcc.com" target="blank">
+            <img src="./assets/tcc.png" style="width: 100%; height: 100%">
+          </a>
+        </div>
+      </div>
+      <div class="col-lg">
+        <div class="p-4 caption">
+          <h4>TCC Company Website</h4>
+          <p>I was the developer at TCC Software Solutions in charge of any changes needed to the company website. This included
+            coding the Secure Virtual Desktop page in ASP.Net Razor Pages based off a provided wireframe and implementing content updates.
+          </p>
+          <a href="https://www.e-tcc.com" target="blank">> View</a>
+        </div>
+      </div>
+      <div class="col-lg d-lg-flex">
+        <div class="portfolioItem">
+          <a href="https://www.e-tcc.com" target="blank">
+            <img src="./assets/tcc.png" style="width: 100%; height: 100%">
+          </a>
+        </div>
+      </div>
+    </div>
+    <!-- KLM -->
+    <div class="row no-gutters">
+      <div class="col-lg">
+        <div class="portfolioItem">
+          <a href="http://mckeekaylie.github.io/klmvisuals" target="blank">
+            <img src="./assets/klm.png" style="width: 100%; height: 100%">
+          </a>
+        </div>
+      </div>
+      <div class="col-lg">
+        <div class="p-4 caption">
+          <h4>KLM Visuals website</h4>
+          <p>KLM Visuals served as my portfolio while I was pursuing opportunities in graphic design and marketing. I designed and coded this website using HTML, CSS & Bootstrap 4.</p>
+          <a href="http://mckeekaylie.github.io/klmvisuals" target="blank">> View</a>
+        </div>
+      </div>
+    </div>
+    <!-- Jenco -->
+    <div class="row no-gutters">
+      <div class="col-lg">
+        <div class="p-4 caption">
+          <h4>JenCo Photo website</h4>
+          <p>JenCo Photo is a portfolio website for a photographer based in Fort Wayne, IN. I designed and coded this website using HTML, CSS & Bootstrap 4.</p>
+          <a href="http://www.jencophoto.world" target="blank">> View</a>
+        </div>
+      </div>
+      <div class="col-lg">
+        <div class="portfolioItem">
+          <a href="http://www.jencophoto.world" target="blank">
+            <img src="./assets/jenco.png" style="width: 100%; height: 100%">
+          </a>
+        </div>
+      </div>
+    </div>
+    <!-- Concert Log-->
+    <!-- <div class="row no-gutters">
+      <div class="col-lg">
+        <div class="p-4 caption">
+          <h4>My Concert Log</h4>
+          <p>A full stack React app I designed and coded while at Eleven Fifty. The app allows users to log concerts they have attended.</p>
+           <a href="https://klm-myconcertlog.herokuapp.com/" target="blank">> View</a>
+        </div>
+      </div>
       <div class="col-lg">
         <div class="portfolioItem">
           <a href="https://klm-myconcertlog.herokuapp.com/" target="blank">
             <img src="./assets/myConcertLog.png" style="width: 100%; height: 100%">
           </a>
-          <div class="portfolioOverlay">
-            <div class="portfolioCaption">
-              <h4>My Concert Log</h4>
-                <p>A full stack app in which users can log concerts they have attended.</p>
-                 <a href="https://klm-myconcertlog.herokuapp.com/" target="blank">> View</a>
-            </div>
-          </div>
         </div>
       </div>
-
-  <!--ROW 3-->
-    <div class="row no-gutters" id="portfolioRow3">
-      <!-- POKEMON API -->
+    </div> -->
+    <!-- Pawcious Memories -->
+    <!-- <div class="row no-gutters">
       <div class="col-lg">
         <div class="portfolioItem">
-          <a href="https://klm-pokemon-search-api.firebaseapp.com/" target="blank">
-            <img src="./assets/pokemon.jpg" style="width: 100%; height: 100%">
+          <a href="https://klm-myconcertlog.herokuapp.com/" target="blank">
+            <img src="./assets/myConcertLog.png" style="width: 100%; height: 100%">
           </a>
-          <div class="portfolioOverlay">
-            <div class="portfolioCaption">
-              <h4>Pokémon Search App</h4>
-                <p>A Pokémon search app I created utilizing the PokéAPI.</p>
-                 <a href="https://klm-pokemon-search-api.firebaseapp.com/" target="blank">> View</a>
-            </div>
-          </div>
         </div>
       </div>
-      <!-- GUESSING GAME -->
       <div class="col-lg">
-        <div class="portfolioItem">
-          <a href="https://repl.it/@KaylieMcKee/32-Guessing-Game" target="blank">
-            <img src="./assets/guessingGame.jpg" style="width: 100%; height: 100%">
-          </a>
-          <div class="portfolioOverlay" style="background-color: #8146FF;">
-            <div class="portfolioCaption">
-              <h4>Guessing Game</h4>
-                <p>A Guessing Game I created solely in JavaScript.</p>
-                 <a href="https://repl.it/@KaylieMcKee/32-Guessing-Game" target="blank">> View</a>
-            </div>
-          </div>
+        <div class="p-4 caption">
+          <h4>Pawcious Memories</h4>
+          <p>A full stack React app I designed and coded with two other peers for my Eleven Fifty capstone. The app serves as a memory book for pets where users can upload photos and pet information.</p>
+            <a href="https://klm-myconcertlog.herokuapp.com/" target="blank">> View</a>
         </div>
       </div>
-    </div>
-  </div>
+    </div> -->
 </section>
 
 <!-- CONTACT -->
@@ -319,20 +417,17 @@
   <div class="container">
     <div class="row">
       <div class="col">
-        <a href="https://www.linkedin.com/in/kayliemckee" target="blank">
+        <a href="https://www.linkedin.com/in/kayliewoods" target="blank">
           <img src="./assets/linkedin-3-256.png" style="width: 3em">
         </a>
         <a href="https://github.com/mckeekaylie" target="blank">
           <img src="./assets/github-9-256.png" style="width: 3em">
         </a>
-        <a href="https://www.codewars.com/users/kayliem?refreshed=true" target="blank">
-          <img src="./assets/codewars.png" style="width: 3em">
-        </a>
       </div>
     </div>
     <div class="row">
       <div class="col">
-        <p style="padding-top: 1em">© Copyright 2020, Kaylie McKee</p>
+        <p style="padding-top: 1em">© Copyright 2022, Kaylie Woods</p>
     </div>
     </div>
   </div>
