--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
       </div>
       <div class="row">
         <div class="col">
-          <p class="lead">I'm a web developer with a background in graphic and UI design.</p>
+          <p class="lead">I'm a full stack developer, specializing in UI/UX.</p>
         </div>
       </div>
       <div class="row">
@@ -104,7 +104,7 @@
 
         <p>Ever since graduating from Eleven Fifty, I have worked at TCC Software Solutions as a UI/UX Developer. During my time at TCC,
           I have worked on several projects including GoGoMeds, NJCCIS, Meck Pre-K, OKDHS, and the TCC website itself. My tasks for these projects have spanned both front and back end.
-          I have designed user interfaces in Adobe XD, coded new pages and features both client and server side, resolved countless bugs, and ensured 508 compliance as well as mobile responsiveness. 
+          I have designed user interfaces in Adobe XD, coded new pages and features both client and server side, resolved countless bugs, and ensured 508 compliance as well as mobile responsiveness on various pages. 
         </p>
       </div>
       <div class="col-md">
@@ -158,7 +158,7 @@
     </div>
   </section>
 
-  <!-- MY CERTIFICATIONS -->
+  <!-- MY CERTIFICATES -->
   <section id="certifications">
     <h1>My Certificates</h1>
     <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
@@ -205,7 +205,7 @@
     </div>
   </section>
 
-<!-- PORTFOLIO -->
+<!-- PROJECTS -->
 <section id="portfolio">
   <div class="container">
     <h1>Projects</h1>
@@ -223,7 +223,8 @@
           <h4>GoGoMeds</h4>
           <p>As a member of the GoGoMeds team at TCC Software Solutions I completed a variety of front-end tasks. This includes
             coding the HTML & CSS of various pages and features, designing user interfaces in Adobe XD, ensuring mobile responsiveness
-            of pages, fixing bugs, and updating page content. I also worked on rebuilding and re-designing GoGoMeds from the ground up, leading the UI/UX side.
+            of pages, fixing bugs, and updating page content. I also worked on a side project where the team aims to rebuild and re-design GoGoMeds from the ground up.
+            I led the design and client-side code for this project.
           </p>
           <a href="https://www.gogomeds.com" target="blank">> View</a>
         </div>
@@ -315,7 +316,7 @@
           <a href="https://www.e-tcc.com" target="blank">> View</a>
         </div>
       </div>
-      <div class="col-lg d-lg-flex">
+      <div class="col-lg d-none d-lg-flex">
         <div class="portfolioItem">
           <a href="https://www.e-tcc.com" target="blank">
             <img src="./assets/tcc.png" style="width: 100%; height: 100%">
@@ -342,7 +343,7 @@
     </div>
     <!-- Jenco -->
     <div class="row no-gutters">
-      <div class="col-lg">
+      <div class="col-lg d-none d-lg-flex">
         <div class="p-4 caption">
           <h4>JenCo Photo website</h4>
           <p>JenCo Photo is a portfolio website for a photographer based in Fort Wayne, IN. I designed and coded this website using HTML, CSS & Bootstrap 4.</p>
@@ -354,6 +355,13 @@
           <a href="http://www.jencophoto.world" target="blank">
             <img src="./assets/jenco.png" style="width: 100%; height: 100%">
           </a>
+        </div>
+      </div>
+      <div class="col-lg d-lg-none">
+        <div class="p-4 caption">
+          <h4>JenCo Photo website</h4>
+          <p>JenCo Photo is a portfolio website for a photographer based in Fort Wayne, IN. I designed and coded this website using HTML, CSS & Bootstrap 4.</p>
+          <a href="http://www.jencophoto.world" target="blank">> View</a>
         </div>
       </div>
     </div>
@@ -419,9 +427,6 @@
       <div class="col">
         <a href="https://www.linkedin.com/in/kayliewoods" target="blank">
           <img src="./assets/linkedin-3-256.png" style="width: 3em">
-        </a>
-        <a href="https://github.com/mckeekaylie" target="blank">
-          <img src="./assets/github-9-256.png" style="width: 3em">
         </a>
       </div>
     </div>
