jenco link update

--- a/index.html
+++ b/index.html
@@ -347,12 +347,12 @@
         <div class="p-4 caption">
           <h4>JenCo Photo website</h4>
           <p>JenCo Photo is a portfolio website for a photographer based in Fort Wayne, IN. I designed and coded this website using HTML, CSS & Bootstrap 4.</p>
-          <a href="http://www.jencophoto.world" target="blank">> View</a>
+          <a href="http://mckeekaylie.github.io/jencophoto" target="blank">> View</a>
         </div>
       </div>
       <div class="col-lg">
         <div class="portfolioItem">
-          <a href="http://www.jencophoto.world" target="blank">
+          <a href="http://mckeekaylie.github.io/jencophoto" target="blank">
             <img src="./assets/jenco.png" style="width: 100%; height: 100%">
           </a>
         </div>
@@ -432,7 +432,7 @@
     </div>
     <div class="row">
       <div class="col">
-        <p style="padding-top: 1em">© Copyright 2022, Kaylie Woods</p>
+        <p style="padding-top: 1em">© Copyright 2023, Kaylie Woods</p>
     </div>
     </div>
   </div>
