--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <div class="collapse navbar-collapse" id="navbarNav">
       <ul class="navbar-nav">
         <li class="nav-item">
-          <a class="nav-link" href="#aboutMe">About</a>
+          <a class="nav-link" href="#myJourney">My Journey</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="#mySkills">Skills</a>
@@ -59,10 +59,15 @@
       </div>
       <div class="row">
         <div class="col">
-          <a href="#aboutMe">
-            <button type="button">Learn more about me</button>
-          </a>
-
+          <div>
+            <a href="#aboutMe" class="me-4">
+              <button type="button">Learn more about me</button>
+            </a>
+  
+            <a href="./assets/KaylieWoods_DesignEngineer_Resume.pdf" class="me-4" download>
+              <button type="button">Download my resume</button>
+            </a>
+          </div>
         </div>
       </div>
       <div class="row" style="padding-top: 2em;">
@@ -77,16 +82,22 @@
   </div>
 </section>
 
-<!-- ABOUT ME -->
-<section id ="aboutMe">
-  <div class="container">
+<!-- MY JOURNEY -->
+<section id ="myJourney">
+  <div class="container my-4">
     <div class="row">
       <div class="col-md">
         <h1>My Journey</h1>
       </div>
     </div>
     <div class="row">
-      <div class="col-md">
+      <div class="col">
+        <p>
+          I graduated from Ball State University cum laude in 2018 with a major in Journalism Graphics (graphic design) 
+          and a minor in Digital Publishing (printing). During my time at Ball State, I completed 4 marketing graphic design 
+          internships in addition to freelance design work and 2 community projects with my journalism department peers.
+        </p>
+  
         <p>
           I graduated from Ball State University cum laude in 2018 with a major in Journalism Graphics (graphic design) 
           and a minor in Digital Publishing (printing). During my time at Ball State, I completed 4 marketing graphic design 
@@ -123,31 +134,19 @@
 
         <p>My time at ProRank has come to an end, but I am now eagerly awaiting my next adventure as a Design Engineer.</p>
       </div>
-      <div class="col-md">
-        <img src="assets/me_2024.jpg" class="rounded-circle">
+    </div>
+  </div>
+  <div class="container-fluid">
+    <div class="row">
+      <div class="col">
+        <img src="assets/Kaylie Woods (New LinkedIn Banner).png.png" class="w-100">
       </div>
     </div>
   </div>
-</section>
-
-<!-- MY SKILLS -->
-<section id="mySkills">
   <div class="container-fluid">
-    <h1>My Skills</h1>
-    <div class="row w-100">
-      <div class="col w-100">
-        <span class="badge rounded-pill fs-4 m-1">HTML 5 & CSS 3</span>
-        <span class="badge rounded-pill fs-4 m-1">Sass</span>
-        <span class="badge rounded-pill fs-4 m-1">Responsive CSS and design</span>
-        <span class="badge rounded-pill fs-4 m-1">CSS frameworks, including Bootstrap 4 & 5</span>
-        <span class="badge rounded-pill fs-4 m-1">JavaScript & TypeScript</span>
-        <span class="badge rounded-pill fs-4 m-1">Angular 6+, Ember & React.js</span>
-        <span class="badge rounded-pill fs-4 m-1">Integration & Unit Testing with Karma</span>
-        <span class="badge rounded-pill fs-4 m-1">RxJS</span>
-        <span class="badge rounded-pill fs-4 m-1">API Development & Postman</span>
-        <span class="badge rounded-pill fs-4 m-1">GIT & GitHub</span>
-        <span class="badge rounded-pill fs-4 m-1">Section 508 / WCAG compliance</span>
-        <span class="badge rounded-pill fs-4 m-1">Design Systems (creation & maintenance)</span>
+    <div class="row">
+      <div class="col">
+        <img src="assets/Skill Graphic.png" class="w-100">
       </div>
     </div>
   </div>
@@ -161,7 +160,7 @@
     </div>
     <div class="row mt-4">
       <h2 class="text-primary">ProRank</h2>
-      <object data="assets/ProRank Highlights (Presentation).pdf" type="application/pdf" width="100%" height="800px"></object>
+      <object data="assets/ProRank Highlights (Presentation) (1).pdf" type="application/pdf" width="100%" height="800px"></object>
     </div>
     <div class="row border-top my-5">
       <div class="mt-3">
@@ -206,6 +205,5 @@
     <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
-
 </body>
 </html>
