--- a/index.html
+++ b/index.html
@@ -160,26 +160,92 @@
     </div>
     <div class="row mt-4">
       <h2 class="text-primary">ProRank</h2>
+      <p>ProRank is a startup seeking to transform talent acquisition in healthcare. I joined as Angular Developer, 
+        developing front-end features and enhancements, but as time progressed, I assumed responsibility for 
+        UX and UI design and front-end developer mentorship in addition to angular development. I was a key voice 
+        in the ideation discussions behind MVP and I brought these discussions to fruition in wireframes and 
+        hi-fidelity mockups. Once the designs were approved, I tackled the angular development required to 
+        bring them to life in the product. These efforts established ProRank\’s new look and the direction 
+        of the product, which led to the signing of ProRank\’s first client.
+      </p>
       <object data="assets/ProRank Highlights (Presentation) (1).pdf" type="application/pdf" width="100%" height="800px"></object>
     </div>
-    <div class="row border-top my-5">
+    <div class="row border-top mt-5 mb-3">
       <div class="mt-3">
         <h2 class="text-primary">Genesys</h2>
-        <h4>Releases involving my work:</h4>
-        <div class="d-flex">
+        <p>Genesys Cloud develops call center and customer service software, driven by empathy. The Analytics UI team 
+          develops views where managers can go and see various analytics and graphics that relay call center agent 
+          productivity. I was a software engineer responsible for developing new views and features for Analytics UI.</p>
+          <p></p>
+
+        <!-- <div class="d-flex">
           <a href="https://help.mypurecloud.com/releasenote/october-26-2022/" target="_blank" class="btn btn-primary me-2">October 26, 2022</a>
           <a href="https://help.mypurecloud.com/releasenote/july-26-2023/" target="_blank" class="btn btn-primary me-2">July 26, 2023</a>
           <a href="https://help.mypurecloud.com/releasenote/march-22-2023/" target="_blank" class="btn btn-primary">March 22, 2023</a>
+        </div> -->
+      </div>
+    </div>
+    <div class="row">
+      <div class="col">
+        <div class="card-group">
+          <div class="card">
+            <img src="./assets/Export View Data.png" class="card-img-top" alt="...">
+            <div class="card-body">
+              <h5 class="card-title">Export View Data</h5>
+              <p class="card-text">
+                Export the data from selected views and selected columns inside Analytics UI as a CSV file or PDF. 
+                This file is sent to the user's inbox inside Genesys Cloud.
+              </p>
+            </div>
+            <a href="https://help.mypurecloud.com/articles/export-view-data/" 
+              target="_blank" class="btn btn-primary m-3" style="width: fit-content;">Documentation</a>
+          </div>
+          <div class="card">
+            <img src="./assets/Conversation Record.png" class="card-img-top" alt="...">
+            <div class="card-body">
+              <h5 class="card-title">Conversation Data Model</h5>
+              <p class="card-text">Applying analytics metrics to conversation records.</p>
+            </div>
+            <a href="https://developer.genesys.cloud/analyticsdatamanagement/analytics/detail/conversation-data-model" 
+              target="_blank" 
+              class="btn btn-primary m-3" 
+              style="width: fit-content;">
+              Documentation
+            </a>
+          </div>
+          <div class="card">
+            <img src="./assets/Queue Performance.png" class="card-img-top" alt="...">
+            <div class="card-body">
+              <h5 class="card-title">Queue Performance Summary & Detail</h5>
+              <p class="card-text">Two new views in Analytics UI where the user can see current and past metrics and data for queues.</p>
+            </div>
+            <div class="d-flex m-3">
+              <a href="https://help.mypurecloud.com/articles/queues-performance-summary-view/" 
+                target="_blank" 
+                class="btn btn-primary me-2"
+                style="width: fit-content;">
+                Summary
+              </a>
+              <a href="https://help.mypurecloud.com/articles/queue-performance-detail-view/" 
+                target="_blank" 
+                class="btn btn-primary me-2" 
+                style="width: fit-content;">
+                Detail
+              </a>
+            </div>
+          </div>
+  
         </div>
       </div>
-    </div>
-    <div class="row border-top my-5">
-      <div class="mt-3">
-        <h2 class="text-primary">TCC Solutions</h2>
-        <h4>Ascend: the solution I worked on from 2020-2022.</h4>
-        <a href="https://tccsolutions.com/technology/" target="_blank" class="btn btn-primary">Ascend</a>
+      <div class="row border-top my-5">
+        <div class="mt-3">
+          <h2 class="text-primary">TCC Solutions</h2>
+          <h4>Ascend: the solution I worked on from 2020-2022.</h4>
+          <a href="https://tccsolutions.com/technology/" target="_blank" class="btn btn-primary">Ascend</a>
+        </div>
       </div>
-    </div>
+        </div>
+        
   </div>
 </section>
 
